Added support for limit and continue params
